# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "kernel.slider",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
        "net/mcps802154/Kbuild",
        "drivers/net/ieee802154/Kbuild",
        "drivers/spi/Kbuild",
    ]),
    outs = [
        "drivers/net/ieee802154/dw3000.ko",
        "net/mcps802154/mcps802154.ko",
        "net/mcps802154/mcps802154_region_fira.ko",
        "net/mcps802154/mcps802154_region_nfcc_coex.ko",
    ],
    kernel_build = "//gs/google-modules/soc-modules:slider",
    visibility = [
        "//gs/google-modules/soc-modules:__pkg__",
    ],
)
